--- a/exercicios/ex017/fundo003.html
+++ b/exercicios/ex017/fundo003.html
@@ -14,19 +14,19 @@
         }
 
         div#q1 {
-            background-image: left top;
+            background-position: left top;
         }
 
         div#q2 {
-            background-image: left center;
+            background-position: left center;
         }
 
         div#q3 {
-            background-image: right bottom;
+            background-position: right bottom;
         }
         
         div#q4 {
-            background-image: center center;
+            background-position: center center;
         }   
     </style>
 </head>
