--- a/exercicios/ex017/fundo006.html
+++ b/exercicios/ex017/fundo006.html
@@ -7,10 +7,10 @@
     <style>
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url(imagens/wallpaper002.jpg);
-            background-repeat: repeat-y;
-            background-position: center center;
+            /* Shorthand - Background  
+               color > image > position > repeat > [size] > attachment 
+            */
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
 
